Settle Bigtable's competing idioms rather than merely aligning them
The line-by-line read of the Bigtable module recorded six places where the
module holds two idioms for one job. Five are repaired by picking the house
form; the sixth turns out to be two correct decisions that were never written
down, so it is repaired by writing them down.

Null checks: `Objects.requireNonNull` had reached fifteen sites against
`Preconditions.checkNotNull`'s 165, and thirteen of the fifteen carried no
message, so the resulting NPE named nothing. All fifteen now use the house
form with a message, which leaves the module free of the other idiom, and
`SelectedCellMutationClassifierTest` pins three of the new messages so a
silent return to the messageless form fails a test.

Blank checks: `appProfileId` used `trim().isEmpty()` in all three builders
while `serviceAccountKeyFile` beside it used `isBlank()`. The two are not
equivalent, and not only in one direction: `trim()` strips every char at or
below U+0020 while `isBlank()` uses `Character.isWhitespace`, so of the BMP's
single characters 15 become newly rejected (U+2028 among them) and 23 newly
accepted (the C0 controls U+0000-U+0008 and U+000E-U+001B). `isBlank()` is
the form every other module's checks use and the form the table factory
already applies to the DDL option, so the builders now use it too and the two
setters on one builder agree.

Qualified names: thirteen references across eight files spelled a type out in
full where the file imports nothing of that name and the sibling code imports.

Transient codes: the writer's `TRANSIENT_CODES` includes `RESOURCE_EXHAUSTED`
and the lookup's does not, and neither said why. The sets gate opposite
actions on the same status, so both are right: the writer's withholds a dead
letter, and a mutation refused for capacity is not the record's fault, while
the lookup's authorizes another point read, which a capacity refusal does not
become worth making. The lookup's three statuses are also e